First Issue of Updated Modules

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "gwharton/module-autocustomergroup",
+    "license": "OSL-3.0",
     "type": "magento2-module",
     "require": {
         "magento/framework": "*"
